--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -100,6 +100,11 @@ article:hover {
   top: 0;
 }
 
+/* Hidden question response */
+.article__response {
+  display: none;
+}
+
 /* Typography, color and divider*/
 h1 {
   font-size: 2.6rem;
