--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -54,6 +54,8 @@ main {
   margin: 100px 0 20px;
   background-color: white;
   border-radius: 20px;
+
+  box-shadow: 0px 10px 15px 0px rgb(0 0 0 / 30%);
 }
 .component-info {
   display: flex;
@@ -68,8 +70,10 @@ main {
   position: absolute;
   top: -90px;
   left: calc(50% - 125px);
-}
 
+  /* Add shadow to svg image */
+  filter: drop-shadow(0px 26px 0px hsla(240, 73%, 65%, 0.1));
+}
 h1 {
   padding-bottom: 30px;
   align-self: center;
@@ -123,6 +127,7 @@ p {
 .author {
   text-align: center;
   color: white;
+  font-size: 1.2rem;
 }
 a {
   color: var(--blue-100);
