--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -57,7 +57,24 @@ main {
 
   box-shadow: 0px 10px 15px 0px rgb(0 0 0 / 30%);
 }
-.component-info {
+
+.img-ctn {
+  position: relative;
+}
+.img {
+  width: 220px;
+  position: absolute;
+  top: -92px;
+  left: calc(50% - 125px);
+
+  /* Add shadow to svg image */
+  filter: drop-shadow(0px 26px 0px hsla(240, 73%, 65%, 0.1));
+}
+.img-cube {
+  display: none;
+}
+
+.text-info-ctn {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -65,15 +82,6 @@ main {
   position: relative;
 }
 
-.component-info img {
-  width: 220px;
-  position: absolute;
-  top: -90px;
-  left: calc(50% - 125px);
-
-  /* Add shadow to svg image */
-  filter: drop-shadow(0px 26px 0px hsla(240, 73%, 65%, 0.1));
-}
 h1 {
   padding-bottom: 30px;
   align-self: center;
@@ -87,7 +95,7 @@ h1 {
   margin-bottom: 20px;
   position: relative;
 
-  padding-bottom: 15px;
+  padding-bottom: 11px;
   border-bottom: 0.5px solid var(--divider-blue);
 }
 article:hover {
@@ -113,6 +121,7 @@ article:hover {
   position: absolute;
 }
 
+/* Response transition */
 .article__response {
   transition: margin 0.5s ease;
 }
