--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -1,10 +1,10 @@
 html {
-  font-size: 62.5%;
+  font-size: 65%;
 }
 
 .component-ctn {
-  width: 750px;
-  min-height: 410px;
+  width: 800px;
+  min-height: 420px;
 
   margin: 40px 0 30px;
 }
@@ -51,10 +51,11 @@ html {
 
 .text-info-ctn {
   align-items: flex-start;
-  padding: 55px 85px 5px 25px;
+  padding: 80px 85px 5px 25px;
 }
 h1 {
   align-self: flex-start;
+  margin-bottom: 10px;
 }
 .article__response {
   font-size: 1rem;
